corrected a couple mistakes including navbar not responsive on the main page.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .bannerQuote {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: large;
+    font-size: 24px;
     text-align: center;
 
 }
